# stm32-radio-cipher-rust

./: Cargo.toml  README.md  flake.nix  flash_board1.sh  flash_board2.sh  spam.sh
.cargo/: config.toml
board1/: Cargo.toml  tmp
board1/.cargo/: config.toml
board1/src/: main.rs
board2/: Cargo.toml
board2/.cargo/: config.toml
board2/src/: main.rs
cmt2300a/: Cargo.toml
cmt2300a/src/: lib.rs
nrf24_driver/: Cargo.toml
nrf24_driver/src/: command.rs  error.rs  lib.rs  memory.rs  mnemonic.rs
